# YoiBlog

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.claude/: settings.local.json
yoiblog/: __init__.py  __main__.py  cli.py  config.py  deployer.py  feed.py  generator.py  pagination.py  post.py  scaffold.py  search_index.py  server.py  taxonomies.py  utils.py
yoiblog/scaffold_templates/: _config.yml  gitignore_tpl
yoiblog/scaffold_templates/source/: about.md
yoiblog/scaffold_templates/source/_posts/: 2026-03-15-hello-world.md
yoiblog/themes/default/static/css/: style.css
yoiblog/themes/default/templates/: 404.html  archive.html  base.html  categories.html  category.html  index.html  page.html  post.html  profile.html  search.html  tag.html  tags.html
yoiblog/webui/: __init__.py  api.py  i18n.py  preview_server.py  routes.py
yoiblog/webui/static/css/: webui.css
yoiblog/webui/templates/: base.html  dashboard.html  deploy.html  editor.html  posts.html  preview.html  settings.html
